--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World! This is a live preview test :)</p>
+    <div class="header">
+        <div class="left">
+            <img src="images/logo.png">
+        </div>
+        <div class="right">
+            <ul class="header-links">
+                <li><a href="#">Part 1</a></li>
+                <li><a href="#">Part 2</a></li>
+                <li><a href="#">Part 3</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
