--- a/index.html
+++ b/index.html
@@ -11,15 +11,32 @@
 </head>
 <body>
     <div class="header">
-        <div class="left">
-            <img src="images/logo.png">
+        <div class="top">
+            <div class="left">
+                <img class="logo-img" src="images/logo.png">
+            </div>
+            <div class="right">
+                <ul class="header-links">
+                    <li><a href="#">Part 1</a></li>
+                    <li><a href="#">Part 2</a></li>
+                    <li><a href="#">Part 3</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="right">
-            <ul class="header-links">
-                <li><a href="#">Part 1</a></li>
-                <li><a href="#">Part 2</a></li>
-                <li><a href="#">Part 3</a></li>
-            </ul>
+        <div class="bottom">
+            <div class="left">
+                <p class="title-text">Jojo's Bizzare Website</p>
+                <p class="subtitle-text">
+                    Throbbing hearts are always ever. 
+                    Burning as if they were in flames.
+                    The pulse that’s ever beating from their palms.
+                    The courage that is pumping through their veins.
+                    With bravery, embrace the blood that holds their fate.</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="right">
+                <img src="images/intro.jpg" alt="jojo main characters from parts 1-6">
+            </div>
         </div>
     </div>
 </body>
