add information section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                     <li><a href="#">Part 1</a></li>
                     <li><a href="#">Part 2</a></li>
                     <li><a href="#">Part 3</a></li>
+                    <li><a href="#">Part 4</a></li>
+                    <li><a href="#">Part 5</a></li>
+                    <li><a href="#">Part 6</a></li>
                 </ul>
             </div>
         </div>
@@ -36,6 +39,29 @@
             </div>
             <div class="right">
                 <img src="images/intro.jpg" alt="jojo main characters from parts 1-6">
+            </div>
+        </div>
+    </div>
+    <div class="info">
+        <div class="info-title">
+            <p>Choose Your Stand</p>
+        </div>
+        <div class="items">
+            <div class="item">
+                <img src="images/star-platnium.png">
+                <p>Star Platnium</p>
+            </div>
+            <div class="item">
+                <img src="images/crazy-diamond.png">
+                <p>Crazy Diamond</p>
+            </div>
+            <div class="item">
+                <img src="images/gold-experience.png">
+                <p>Gold Experience</p>
+            </div>
+            <div class="item">
+                <img src="images/stone-free.png">
+                <p>Stone Free</p>
             </div>
         </div>
     </div>
