add quote section

--- a/index.html
+++ b/index.html
@@ -65,5 +65,9 @@
             </div>
         </div>
     </div>
+    <div class="Quote">
+        <p class="quote-text">Immortality, Eternal life, STAND POWER! This proves no one can surpass DIO, Puny humans, i shall rule you all! Bow before my knowledge and might!</p>
+        <p class="quote-origin">- Dio Brando, Stardust Crusaders</p>
+    </div>
 </body>
 </html>
