--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
         </div>
         <div class="signup-button">
             <button>Let's go!</button>
-        <div></div>
+        </div>
+    </div>
+    <div class="footer">   
+    <p>Copyright © The Speedwagon Foundation 2022</p>
     </div>
 </body>
 </html>
