fixed typo in intro

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="bottom">
             <div class="left">
-                <p class="title-text">Jojo's Bizzare Website</p>
+                <p class="title-text">JoJo's Bizzare Website</p>
                 <p class="subtitle-text">
                     Throbbing hearts are always ever. 
                     Burning as if they were in flames.
