add youtube links to buttons

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </div>
             <div class="right">
                 <ul class="header-links">
-                    <li><a href="#">Part 1</a></li>
-                    <li><a href="#">Part 2</a></li>
-                    <li><a href="#">Part 3</a></li>
-                    <li><a href="#">Part 4</a></li>
-                    <li><a href="#">Part 5</a></li>
-                    <li><a href="#">Part 6</a></li>
+                    <li><a href="https://jojo.fandom.com/wiki/Phantom_Blood">Part 1</a></li>
+                    <li><a href="https://jojo.fandom.com/wiki/Battle_Tendency">Part 2</a></li>
+                    <li><a href="https://jojo.fandom.com/wiki/Stardust_Crusaders">Part 3</a></li>
+                    <li><a href="https://jojo.fandom.com/wiki/Diamond_is_Unbreakable">Part 4</a></li>
+                    <li><a href="https://jojo.fandom.com/wiki/Vento_Aureo">Part 5</a></li>
+                    <li><a href="https://jojo.fandom.com/wiki/Stone_Ocean">Part 6</a></li>
                 </ul>
             </div>
         </div>
@@ -35,7 +35,9 @@
                     The pulse that’s ever beating from their palms.
                     The courage that is pumping through their veins.
                     With bravery, embrace the blood that holds their fate.</p>
-                <button>Sign Up</button>
+                <a href="https://www.youtube.com/watch?v=l-NidcMz_xk">
+                    <button>Sign Up</button>
+                </a>
             </div>
             <div class="right">
                 <img src="images/intro.jpg" alt="jojo main characters from parts 1-6">
@@ -75,7 +77,9 @@
             <p class="signup-text-subtitle">Get started by smashing that button right over there. Ora Ora!</p>
         </div>
         <div class="signup-button">
-            <button>Let's go!</button>
+            <a href="https://www.youtube.com/watch?v=OzHE5q1NGa4">
+                <button>Let's go!</button>
+            </a>
         </div>
     </div>
     <div class="footer">   
